src/sass/_article-feed.scss
@use 'baseline';
@use 'button';
@use 'functions';
@use 'list';
@use 'settings';
@use 'typography';

.article-feed__list {
  @include list.basics();
  margin-top: 0;

  p:last-child {
    margin-bottom: 0;
  }
}

.article-feed__item {
  border: 1px solid #cfd8dc;
  border-left-width: 0;
  border-right-width: 0;
  background-color: #fff;
  margin-bottom: baseline.increments(1);

  &:first-child {
    border-top-width: 0;
  }

  @media screen and (min-width: settings.$breakpoint-narrow) {
    border-radius: 6px;
    border-left-width: 1px;
    border-right-width: 1px;

    &:first-child {
      border-top-width: 1px;
    }
  }

  &:last-child {
    margin-bottom: 0;
  }

  h3 {
    @include typography.sizing($font-size: settings.$base-font-measure, $line-height-in-increments: 3);
    font-weight: bold;
  }
}

.article-feed__item_contents {
  padding: baseline.increments(2) 1rem 0;
  margin-bottom: baseline.increments(3);
  @media screen and (min-width: settings.$breakpoint-narrow) {
    grid-column: 1 / 9;
    padding: baseline.increments(3) 1.5rem 0;
  }
}

.article-feed__item_header {
  @include typography.sizing($font-size: 14px, $line-height-in-increments: 2.5);
  display: flex;
  margin-bottom: baseline.increments(2);
}

.article-feed__item__avatar {
  width: 47px;
  height: 47px;
  border: 1px solid rgb(238, 238, 238);
  border-radius: 4px;
  flex: 0 0 47px;
  margin-right: 0.5rem;
}

.article-feed__item__date {
  font-family: Ubuntu, sans-serif;
  color: settings.$colour-grey-two;
  margin-left: auto;
  flex-shrink: 0;
}

.article-feed__item__title,
p.article-feed__item__title {
  font-family: Ubuntu, sans-serif;
  padding-right: functions.px-to-rem(8px);
}

.article-feed__item-toggle {
  @include typography.sizing(14px, 2.5);
  font-weight: normal;
  outline-width: 0;
  background: none;
  cursor: pointer;
  padding: functions.px-to-rem(7px) functions.px-to-rem(13px);
  width: functions.px-to-rem(107px);
  margin-bottom: baseline.increments(2);
}

.article-feed__item__read_more {
  display: block;
}

.article-feed__item_body {
  position: relative;
  width: 100%;
  margin-right: 1.5rem;

  ol,
  ul {
    margin-bottom: baseline.increments(3);
  }
}

.responses {
  display: flex;
  align-items: center;
  padding: baseline.increments(1.5) functions.px-to-rem(16px);
  background-color: #eff2f3;
  border-top: 1px solid #cfd8dc;
  @media screen and (min-width: settings.$breakpoint-narrow) {
    padding-left: functions.px-to-rem(24px);
    padding-right: functions.px-to-rem(24px);
  }
}

.responses__question {
  @include typography.sizing(14px, 1.75);
  padding-right: functions.px-to-rem(8px);
}

.responses__actions {
  display: flex;
  justify-content: flex-start;
}

.responses__action {
  display: flex;
  margin-right: 4px;
  align-items: center;
}

.responses__button {
  @include button.basics();
  @include typography.sizing(14px, 1.75);
  min-width: functions.px-to-rem(52px);
  padding: functions.px-to-rem(5px);
  border: 1px solid rgba(69, 90, 100, 0.8);
  border-radius: 5px;
  background-color: #607d8b;
  color: settings.$colour-white;

  img {
    margin-left: 4px;
    width: 15px;
    height: 14px;
    margin-bottom: -2px;
  }
}

